appId: com.android.chrome
---
- tapOn: OBE
- assertVisible:
    id: upMain
#force back to previous page
- back
