appId: com.android.chrome
---
- tapOn: Registration

- assertVisible: FYDP Group Submission
- tapOn: FYDP Group Submission
